[Preetham B S] REFACTORED - Swagger code
